--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/tabs": "^2.2.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
@@ -22,7 +23,7 @@
     "client-only": "^0.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.4.3",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^11.14.4",
     "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
     "next": "^13.4.3",
