--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^11.14.4",
     "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
+    "mindstudio": "^0.9.6",
     "next": "^13.4.3",
     "next-auth": "^4.23.1",
     "rc-slider": "^10.1.1",
