--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.2.4",
     "client-only": "^0.0.1",
+    "dotenv": "^16.4.7",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.4.3",
     "framer-motion": "^11.14.4",
     "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
     "mindstudio": "^0.9.6",
+    "mongoose": "^8.12.1",
     "next": "^13.4.3",
     "next-auth": "^4.23.1",
     "rc-slider": "^10.1.1",
@@ -33,11 +35,14 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-swipeable": "^7.0.0",
     "react-use": "^17.4.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.62.1",
     "server-only": "^0.0.1",
+    "styled-components": "^6.1.15",
+    "twilio": "^5.4.5",
     "typescript": "5.0.4"
   },
   "devDependencies": {
