--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "^13.4.3",
     "framer-motion": "^11.14.4",
     "google-map-react": "^2.2.1",
+    "googleapis": "^146.0.0",
     "lodash": "^4.17.21",
     "mindstudio": "^0.9.6",
     "mongoose": "^8.12.1",
