--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^11.14.4",
     "google-map-react": "^2.2.1",
     "googleapis": "^146.0.0",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "mindstudio": "^0.9.6",
     "mongoose": "^8.12.1",
